--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,12 @@
             <version>${version.junit}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
+        </dependency>
     </dependencies>
 
     <build>
